--- a/package.json
+++ b/package.json
@@ -24,11 +24,20 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "settings": {
+    "react": {
+      "version": "detect",
+      "runtime": "automatic"
+    }
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "import/no-anonymous-default-export": "off"
+    }
   },
   "browserslist": {
     "production": [
